--- a/terminator/config
+++ b/terminator/config
@@ -13,27 +13,28 @@
   [[default]]
     scrollbar_position = hidden
     visible_bell = True
+    background_image = None
     icon_bell = False
     show_titlebar = False
     copy_on_selection = True
     scrollback_infinite = True
-
   [[solarized-dark]]
     scrollbar_position = hidden
-    visible_bell = True
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    visible_bell = True
+    background_image = None
     cursor_color = "#eee8d5"
     foreground_color = "#eee8d5"
-    background_color = "#002b36"
     icon_bell = False
     show_titlebar = False
     copy_on_selection = True
+    background_color = "#002b36"
     scrollback_infinite = True
-
   [[solarized-light]]
+    scrollbar_position = hidden
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     visible_bell = True
-    scrollbar_position = hidden
+    background_image = None
     cursor_color = "#002b36"
     foreground_color = "#002b36"
     icon_bell = False
